# unreact

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile
docs/: 404.html  hello.html  index.html  plain.html
docs/hello/: again.html
docs/post/: example.html  other.html
docs/styles/: global.css
docs/styles/posts/: styles.css
src/: app.rs  lib.rs  main.rs  server.rs  server2.rs  types.rs
styles/: global.scss
templates/: hello.hbs  index.hbs  post.hbs
templates/error/: not_found.hbs
templates/error/other/: unknown.hbs
templates/partials/: boilerplate.hbs  my_partial.hbs
