[package]
name = "unreact"
version = "0.1.0"
edition = "2021"

[dependencies]
grass = "0.11.2"
handlebars = "4.3.5"
serde = "1.0.139"
serde_json = "1.0.87"
# For development mode - not in `dev-dependencies`
just = "1.8.0"
tokio = { version = "1", features = ["full"] }
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
dircpy = "0.3.13"
minify-html = "0.10.3"
css-minify = "0.2.2"
