[package]
name = "unreact"
version = "0.1.0"
edition = "2021"
description = "A static site generation framework for Rust using Handlebars and Scss."
license = "MIT"
exclude = [
  "build",
  "docs",
  ".devbuild",
  "templates",
  "styles",
  "public",
  "target",
  "justfile",
]
repository = "https://github.com/darccyy/unreact"
authors = ["darcy"]
keywords = [
  "react",
  "framework",
  "ssg",
  "static",
  "static site",
  "static-site",
  "generation",
  "web",
  "website",
]

[dependencies]
grass = "0.11.2"
handlebars = "4.3.5"
serde = "1.0.139"
serde_json = "1.0.87"
minify-html = "0.10.3"
css-minify = "0.2.2"
dircpy = "0.3.13"
# For running app in dev mode - NOT [dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
http = "0.2.8"
just = "1.8.0"
